# pymole

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
build_tools/: prepare_mole.py
src/pymole/: __init__.py  backend.py  base.py
src/pymole/cpp/: CMakeLists.txt  __init__.py  operators.cpp
src/pymole/pure/: __init__.py  operators.py
tests/: test_operators.py
